--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /build/openGL_sandbox/openGL_sandbox/Debug
 /build/openGL_sandbox/openGL_sandbox.VC.VC.opendb
+/build/openGL_sandbox/.vs/openGL_sandbox/v15
